<resources>
    <string name="app_name">Music Player</string>
    <string name="playlists">Playlists</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="songs">Songs</string>
    <string name="now_playing">Now Playing ▶️️</string>
    <string name="now_playing_title">Now Playing</string>

    <string name="explain_artists">On this activity the user will interact with a list of artists. Clicking
    on one of these entries would bring the user to another list activity. To implement this I would need
    some functionality that will scan the user\'s phone for media files and lists them together using their
    meta data. I would also need to be able to create a new Activity for each individual artist.</string>

    <string name="explain_albums">On this activity the user will interact with a list of albums. Clicking
    on one of these entries would bring the user to another list activity. To implement this I would need
    some functionality that will scan the user\'s phone for media files and lists them together using their
    meta data. I would also need to be able to create a new Activity for each individual album.</string>

    <string name="explain_playlists">On this activity the user will interact with a list of playlist. Clicking
    on one of these entries would bring the user to another list activity. To implement this I would need
    some functionality that will scan the user\'s phone for media files and lists them together using their
    meta data. I would also need to be able to create a new Activity for each individual album.</string>

    <string name="explain_songs">On this activity the user will interact with a list of songs. Clicking
    on one of these entries will make that song the now playing song. To implement this I would need
    some functionality that will scan the user\'s phone for media files and lists them together using their
    meta data. I would also need to be able to play a media file, I could use the Media Playback API. </string>

    <string name="explain_now_playing">This page shows which song is currently playing or paused. It will
        have the controls: start, stop, skip, and previous. I will need to use the Media Playback API
    and also implement some code to get the buttons working correctly.</string>

    <string name="album_1">Album 1</string>
    <string name="artist_1">Artist 1</string>
    <string name="music_1">Music 1</string>
</resources>
