<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.flaviokreis.musicplayer.MainActivity">

    <TextView
        android:id="@+id/playlists_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/CustomButton"
        android:background="#D32F2F"
        android:text="@string/playlists" />

    <TextView
        android:id="@+id/artists_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/CustomButton"
        android:background="#0288D1"
        android:text="@string/artists"
        android:layout_below="@id/playlists_button"/>

    <TextView
        android:id="@+id/albums_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/CustomButton"
        android:background="#388E3C"
        android:text="@string/albums"
        android:layout_below="@id/artists_button"/>

    <TextView
        android:id="@+id/now_playing_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/NowPlayingButton"
        android:text="@string/now_playing"/>

</RelativeLayout>
