<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_artists"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.flaviokreis.musicplayer.ArtistsActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explain_artists"/>

    <LinearLayout
        android:id="@+id/artist"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_below="@id/text"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
            android:text="@string/artist_1"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/now_playing_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/NowPlayingButton"
        android:text="@string/now_playing"/>

</RelativeLayout>
